welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: too many arguments for method test2: (a: Int)Int
comp = comp + test2(a,comp)
                   ^countTeen:4: error: too many arguments for method test2: (a: Int)Int
comp = comp + test2(b,comp)
                   ^countTeen:5: error: too many arguments for method test2: (a: Int)Int
comp = comp + test2(c,comp)
                   ^countTeen:6: error: too many arguments for method test2: (a: Int)Int
comp = comp + test2(d,comp)
                   ^